--- a/vi/pp.ipynb
+++ b/vi/pp.ipynb
@@ -347,8 +347,271 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "dc22169d-b4db-4f9a-a57e-6ef14a8af4c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import paddle\n",
+    "from paddle.nn import Linear\n",
+    "import paddle.nn.functional as F\n",
+    "import numpy as np\n",
+    "import os\n",
+    "import random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "52d9cdf9-7ea7-469a-bdf6-b461638e854c",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "def load_data(f):\n",
+    "    data = np.fromfile(f, sep=' ', dtype=np.float32)\n",
+    "    \n",
+    "    # 每条数据包括14项，其中前面13项是影响因素，第14项是相应的房屋价格中位数\n",
+    "    feature_names = [ 'CRIM', 'ZN', 'INDUS', 'CHAS', 'NOX', 'RM', 'AGE', 'DIS', 'RAD', 'TAX', 'PTRATIO', 'B', 'LSTAT', 'MEDV' ]\n",
+    "    feature_num = len(feature_names)\n",
+    "    \n",
+    "    data = data.reshape([data.shape[0] // feature_num, feature_num])\n",
+    "    \n",
+    "    # 将原数据集拆分成训练集和测试集\n",
+    "    # 这里使用80%的数据做训练，20%的数据做测试\n",
+    "    # 测试集和训练集必须是没有交集的\n",
+    "    ratio = 0.8\n",
+    "    offset = int(data.shape[0] * ratio)\n",
+    "    training_data = data[:offset]\n",
+    "    \n",
+    "    # 计算train数据集的最大值，最小值\n",
+    "    maximums, minimums = training_data.max(axis=0), training_data.min(axis=0)\n",
+    "    \n",
+    "    # 记录数据的归一化参数，在预测时对数据做归一化\n",
+    "    global max_values\n",
+    "    global min_values\n",
+    "    \n",
+    "    max_values = maximums\n",
+    "    min_values = minimums\n",
+    "    \n",
+    "    # 对数据进行归一化处理\n",
+    "    for i in range(feature_num):\n",
+    "        data[:, i] = (data[:, i] - min_values[i]) / (maximums[i] - minimums[i])\n",
+    "    \n",
+    "    training_data = data[:offset]\n",
+    "    test_data = data[offset:]\n",
+    "    \n",
+    "    return training_data, test_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "56923601-4df2-43b6-a76f-93c5883456ad",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(404, 14)\n",
+      "[2.35922547e-04 0.00000000e+00 2.62405723e-01 0.00000000e+00\n",
+      " 1.72839552e-01 5.47997713e-01 7.82698274e-01 3.48961979e-01\n",
+      " 4.34782617e-02 1.14822544e-01 5.53191364e-01 1.00000000e+00\n",
+      " 2.04470202e-01 3.68888885e-01]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 验证数据集读取程序的正确性\n",
+    "data_file = '../data/housing.csv'\n",
+    "training_data, test_data = load_data(data_file)\n",
+    "print(training_data.shape)\n",
+    "print(training_data[1, :])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "a7e86be4-3271-47d5-aec7-621ee7299d84",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "class Regressor(paddle.nn.Layer):\n",
+    "    def __init__(self):\n",
+    "        super(Regressor, self).__init__()\n",
+    "        \n",
+    "        self.fc = Linear(in_features=13, out_features=1)\n",
+    "    \n",
+    "    def forward(self, inputs):\n",
+    "        x = self.fc(inputs)\n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "7a5fc436-5eab-4802-9d4a-56a5a044790f",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "model = Regressor()\n",
+    "model.train()\n",
+    "training_data, test_data = load_data(data_file)\n",
+    "opt = paddle.optimizer.SGD(learning_rate=0.01, parameters=model.parameters())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "a5593ca5-01d3-4c3f-8e30-92028127208f",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch: 0, iter: 0, loss is: [0.18709671]\n",
+      "epoch: 0, iter: 20, loss is: [0.18732806]\n",
+      "epoch: 0, iter: 40, loss is: [0.03730242]\n",
+      "epoch: 1, iter: 0, loss is: [0.07558794]\n",
+      "epoch: 1, iter: 20, loss is: [0.26684335]\n",
+      "epoch: 1, iter: 40, loss is: [0.09141275]\n",
+      "epoch: 2, iter: 0, loss is: [0.02915162]\n",
+      "epoch: 2, iter: 20, loss is: [0.07933918]\n",
+      "epoch: 2, iter: 40, loss is: [0.03347169]\n",
+      "epoch: 3, iter: 0, loss is: [0.04780255]\n",
+      "epoch: 3, iter: 20, loss is: [0.13286522]\n",
+      "epoch: 3, iter: 40, loss is: [0.1979607]\n",
+      "epoch: 4, iter: 0, loss is: [0.10601435]\n",
+      "epoch: 4, iter: 20, loss is: [0.04706139]\n",
+      "epoch: 4, iter: 40, loss is: [0.08828487]\n",
+      "epoch: 5, iter: 0, loss is: [0.09954137]\n",
+      "epoch: 5, iter: 20, loss is: [0.08786356]\n",
+      "epoch: 5, iter: 40, loss is: [0.05110221]\n",
+      "epoch: 6, iter: 0, loss is: [0.07174417]\n",
+      "epoch: 6, iter: 20, loss is: [0.02342386]\n",
+      "epoch: 6, iter: 40, loss is: [0.04081912]\n",
+      "epoch: 7, iter: 0, loss is: [0.076805]\n",
+      "epoch: 7, iter: 20, loss is: [0.04391838]\n",
+      "epoch: 7, iter: 40, loss is: [0.05142963]\n",
+      "epoch: 8, iter: 0, loss is: [0.08968471]\n",
+      "epoch: 8, iter: 20, loss is: [0.05321789]\n",
+      "epoch: 8, iter: 40, loss is: [0.04288197]\n",
+      "epoch: 9, iter: 0, loss is: [0.04510193]\n",
+      "epoch: 9, iter: 20, loss is: [0.04770286]\n",
+      "epoch: 9, iter: 40, loss is: [0.07758629]\n"
+     ]
+    }
+   ],
+   "source": [
+    "EPOCH_NUM = 10\n",
+    "BATCH_SIZE = 10\n",
+    "\n",
+    "for epoch_id in range(EPOCH_NUM):\n",
+    "    np.random.shuffle(training_data)\n",
+    "    mini_batches = [training_data[k:k+BATCH_SIZE] for k in range(0, len(training_data), BATCH_SIZE)]\n",
+    "    for iter_id, mini_batch in enumerate(mini_batches):\n",
+    "        x = np.array(mini_batch[:, :-1])\n",
+    "        y = np.array(mini_batch[:, -1:])\n",
+    "        house_features = paddle.to_tensor(x)\n",
+    "        prices = paddle.to_tensor(y)\n",
+    "        \n",
+    "        predicts = model(house_features)\n",
+    "        \n",
+    "        loss = F.square_error_cost(predicts, label=prices)\n",
+    "        avg_loss = paddle.mean(loss)\n",
+    "        if iter_id % 20 == 0:\n",
+    "            print(\"epoch: {}, iter: {}, loss is: {}\".format(epoch_id, iter_id, avg_loss.numpy()))\n",
+    "        \n",
+    "        avg_loss.backward()\n",
+    "        opt.step()\n",
+    "        opt.clear_grad()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "2924eec4-20a3-4fe1-8803-82346411fd6a",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "模型保存成功，模型参数保存在LR_model.pdparams中\n"
+     ]
+    }
+   ],
+   "source": [
+    "paddle.save(model.state_dict(), 'LR_model.pdparams')\n",
+    "print(\"模型保存成功，模型参数保存在LR_model.pdparams中\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "a874aa85-07c3-4aa8-8130-7cb4bf87bb68",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "def load_one_example():\n",
+    "    idx = np.random.randint(0, test_data.shape[0])\n",
+    "    idx = -10\n",
+    "    one_data, label = test_data[idx, :-1], test_data[idx, -1]\n",
+    "    one_data = one_data.reshape([1, -1])\n",
+    "    \n",
+    "    return one_data, label"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "1c52a8c4-7919-49a0-8005-ecb24cc1f778",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Inference result is [[21.266832]], the corresponding label is 19.700000762939453\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_dict = paddle.load('LR_model.pdparams')\n",
+    "model.load_dict(model_dict)\n",
+    "model.eval()\n",
+    "\n",
+    "one_data, label = load_one_example()\n",
+    "one_data = paddle.to_tensor(one_data)\n",
+    "predict = model(one_data)\n",
+    "\n",
+    "predict = predict * (max_values[-1] - min_values[-1]) + min_values[-1]\n",
+    "label = label * (max_values[-1] - min_values[-1]) + min_values[-1]\n",
+    "\n",
+    "print(\"Inference result is {}, the corresponding label is {}\".format(predict.numpy(), label))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cda2407d-b207-4357-a02c-024cca239fbc",
    "metadata": {},
    "outputs": [],
    "source": []
